--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ idna==3.10
 numpy==1.24.4
 outcome==1.3.0.post0
 pandas==2.0.3
+psycopg2-binary==2.9.10
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.2
 selenium==4.27.1
 six==1.17.0
