--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -7,9 +7,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      URL_SKILLS: ${{secrets.URL_SKILLS}}
     steps:
       - uses: actions/checkout@v4  
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13.3' 
-      - run: python testing_workflow.py
+      - run: pip install -r requirements.txt
+      - run: python main.py
