--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4  
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.13.3' 
+          python-version: '3.11' 
+      - run: sudo apt-get update && sudo apt-get install -y libpq-dev build-essential
       - run: pip install -r requirements.txt
       - run: python main.py
