--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -21,12 +21,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11' 
-      - uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: 'latest'
+      - name: Install dependencies de SO
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable unzip
       - uses: nanasess/setup-chromedriver@v1
         with:
-          version: 'latest'
+          chromedriver-version: 'latest'
       - run: sudo apt-get update && sudo apt-get install -y libpq-dev build-essential
       - run: pip install -r requirements.txt
       - run: python main.py
