--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -29,4 +29,5 @@ jobs:
         with:
           python-version: '3.11' 
       - run: pip install -r requirements.txt
+      - run: pip install -U selenium
       - run: python main.py
