--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -14,6 +14,7 @@ jobs:
       POSTGRES_DATABASE: ${{secrets.POSTGRES_DATABASE}}
       POSTGRES_HOST: ${{secrets.POSTGRES_HOST}}
       POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
+      DEV: ${{secrets.DEV}}
     steps:
       - uses: actions/checkout@v4  
       - uses: actions/setup-python@v5
