--- a/.github/workflows/automate_extraction.yaml
+++ b/.github/workflows/automate_extraction.yaml
@@ -28,4 +28,4 @@ jobs:
         run: sudo apt install -y chromium-browser
       - run: pip install -r requirements.txt
       - run: pip install selenium webdriver-manager
-      - run: python main.py
+      - run: python script/main.py
