--- a/.github/workflows/automate_skills.yaml
+++ b/.github/workflows/automate_skills.yaml
@@ -28,4 +28,4 @@ jobs:
         run: sudo apt install -y chromium-browser
       - run: pip install -r requirements.txt
       - run: pip install selenium webdriver-manager
-      - run: python extrating_skills.py
+      - run: python script/extrating_skills.py
